--- a/tox.ini
+++ b/tox.ini
@@ -33,6 +33,12 @@ ignore=
     B020
     ; Module level import not at top of file
     E402
+    ; One-line docstring should fit on one line with quotes
+    D200
+    ; 1 blank line required between summary line and description
+    D205
+    ; First line should be in imperative mood; try rephrasing
+    D401
 
     ; Specific for this project:
     ; Insecure use of "sys" module
